--- a/package.json
+++ b/package.json
@@ -1,23 +1,42 @@
 {
-  "name": "habit_grit",
-  "version": "0.0.1",
-  "description": "",
-  "main": "index.js",
+  "name": "habit-grit-fr",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "express": "^4.18.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1",
+    "web-vitals": "^2.1.4"
+  },
+  "devDependencies" : {
+    "@babel/plugin-proposal-private-property-in-object": "^3.1.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/eerieA/habit_grit.git"
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
-  "keywords": [
-    "web app",
-    "habit tracker"
-  ],
-  "author": "eerieA",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/eerieA/habit_grit/issues"
-  },
-  "homepage": "https://github.com/eerieA/habit_grit#readme"
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
