--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "https-browserify": "^1.0.0",
     "open": "^10.0.3",
     "os-browserify": "^0.3.0",
+    "plotly.js": "^2.33.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-plotly.js": "^2.6.0",
     "react-scripts": "^5.0.1",
     "server-destroy": "^1.0.1",
     "stream-http": "^3.2.0",
